feat(core): add request version of wolframe - I think it has bug

--- a/notebooks/langchain_tools/langchain_tools.ipynb
+++ b/notebooks/langchain_tools/langchain_tools.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,11 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# os.environ[\"WOLFRAM_ALPHA_APPID\"] =  getpass.getpass()\n",
+    "os.environ[\"WOLFRAM_ALPHA_APPID\"] =  getpass.getpass()\n",
     "\n",
     "from langchain_community.utilities.wolfram_alpha import WolframAlphaAPIWrapper\n",
     "\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "'Assumption: 2 x + 2 = -3 x + 7 \\nAnswer: x = 1'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "'Assumption: sin(45°) \\nAnswer: 1/sqrt(2)'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,6 +410,59 @@
     "\n",
     "for pod in res.pods:\n",
     "    print(f\"{pod.title}: {pod.text}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wolfram alpha - request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: Input\n",
+      "  -> 2 x×2 = -3 x×7\n",
+      "Title: Result\n",
+      "  -> 4 x = -21 x\n",
+      "Title: Plot\n",
+      "  -> \n",
+      "Title: Alternate form\n",
+      "  -> 25 x = 0\n",
+      "Title: Number line\n",
+      "  -> \n",
+      "Title: Solution\n",
+      "  -> x = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "app_id = os.environ[\"WOLFRAM_ALPHA_APPID\"]\n",
+    "query = \"2x + 2 = -3x + 7\" ## This query doesn't work\n",
+    "\n",
+    "url = f\"https://api.wolframalpha.com/v2/query?input={query}&appid={app_id}&output=JSON\"\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.ok:\n",
+    "    data = response.json()\n",
+    "    pods = data.get(\"queryresult\", {}).get(\"pods\", [])\n",
+    "    for pod in pods:\n",
+    "        print(\"Title:\", pod.get(\"title\"))\n",
+    "        for sub in pod.get(\"subpods\", []):\n",
+    "            print(\"  ->\", sub.get(\"plaintext\"))\n",
+    "else:\n",
+    "    print(\"Request failed:\", response.status_code, response.text)"
    ]
   },
   {
