fix(core): use multilingual model for embeddings

--- a/notebooks/librechat/librechat.ipynb
+++ b/notebooks/librechat/librechat.ipynb
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1471,7 @@
     "\n",
     "embeddings = CohereEmbeddings(\n",
     "    cohere_api_key=cohere_api_key,\n",
-    "    model = \"embed-english-light-v3.0\",\n",
+    "    model = \"embed-multilingual-light-v3.0\",\n",
     "    max_retries = 5,\n",
     "    request_timeout = 20,\n",
     "    user_agent=\"langchain\"\n",
