--- a/notebooks/librechat/librechat.ipynb
+++ b/notebooks/librechat/librechat.ipynb
@@ -1728,7 +1728,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rag_chain = None # TODO: Define a RAG chain"
+    "from langchain_cohere import ChatCohere\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain.chains import create_retrieval_chain\n",
+    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
+    "\n",
+    "retriever = vector_store.as_retriever(search_type = \"mmr\",\n",
+    "                                      search_kwargs = {\"fetch_k\": 7, \"k\": 5})\n",
+    "\n",
+    "llm = ChatCohere()\n",
+    "\n",
+    "system_prompt = (\n",
+    "    \"از محتوای بافتاری زیر برای پاسخ به سوال استفاده کن\"\n",
+    "    \"اگر پاسخ سوال را نمی‌دانی، بگو نمی‌دانم. \"\n",
+    "    \"پاسخ خود را مختصر و دقیق نگه دار و حداکثر در سه جمله بنویس.\"\n",
+    "    \"بافتار: {context}\"\n",
+    ")\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", system_prompt),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "    ]\n",
+    ")\n",
+    "question_answer_chain = create_stuff_documents_chain(llm, prompt)\n",
+    "rag_chain = create_retrieval_chain(retriever, question_answer_chain) # TODO: Define a RAG chain\n"
    ]
   },
   {
@@ -1738,7 +1761,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۱: توروالدز برای کار در چه موسسه‌ای دانشگاه هلسینکی را ترک گفت؟\"\n",
-    "answer1 = None"
+    "answer1 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1748,7 +1771,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۲: آندرو تاننباوم استاد کدام دانشگاه است؟\"\n",
-    "answer2 = None"
+    "answer2 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1758,7 +1781,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۳: در سال ۲۰۰۶ چند درصد از هسته لینوکس توسط توروالدز نوشته شد (به عدد)؟\"\n",
-    "answer3 = None"
+    "answer3 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1768,7 +1791,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۴: چه کسی بنیاد نرم‌افزارهای آزاد را بنا نهاد؟\"\n",
-    "answer4 = None"
+    "answer4 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1778,7 +1801,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۵: ریچارد استالمن در ۲۱ سالگی در کدام شرکت کار می‌کرد؟\"\n",
-    "answer5 = None"
+    "answer5 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1788,7 +1811,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۶: یکی از مشهورترین پروژه‌هایی که در ابتدا پروژه‌ی آزاد و آکادمیک بود اما بعد وارد محیط بسته‌ی تجاری شد چه بود؟\"\n",
-    "answer6 = None"
+    "answer6 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1798,7 +1821,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۷: لینکدین در سانسور کردن حساب‌ها به درخواست چه کشوری مشهور است؟\"\n",
-    "answer7 = None"
+    "answer7 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1808,7 +1831,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۸: ریچارد استالمن پیشنهاد می‌کند به‌جای گوگل مپ از چه سرویسی استفاده کنیم؟\"\n",
-    "answer8 = None"
+    "answer8 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1818,7 +1841,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۹: آزادی صفرم در نرم‌افزار آزاد چه عنوانی دارد؟\"\n",
-    "answer9 = None"
+    "answer9 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1828,7 +1851,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۱۰: آیا یک نرم‌افزار آزاد لزوماً رایگان است (بله یا خیر)؟\"\n",
-    "answer10 = None"
+    "answer10 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1838,7 +1861,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۱۱: استاندارد ناظر بر فایل‌ها و دایرکتوری‌ها به‌اختصار چه نامیده می‌شود؟\"\n",
-    "answer11 = None"
+    "answer11 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1848,7 +1871,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۱۲: اولین ریپلای به ایمیل درخواست کار چیست؟\"\n",
-    "answer12 = None"
+    "answer12 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1858,7 +1881,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۱۳: اگر امروز که از شنبه ورزش می‌کنم در واقع دچار چه بایاسی شده‌ایم؟\"\n",
-    "answer13 = None"
+    "answer13 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1868,7 +1891,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۱۴: دنبال یاد گرفتن کدوم یکی باشیم: برنامه‌نویسی یا دستور زبان یک زبان خاص؟\"\n",
-    "answer14 = None"
+    "answer14 =  rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1878,7 +1901,7 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۱۵: اگه هدف‌مون اینه که بریم گوگل کار کنیم اول از همه چه‌چیزی رو سرچ کنیم؟\"\n",
-    "answer15 = None"
+    "answer15 = rag_chain.invoke({\"input\": query})"
    ]
   },
   {
@@ -1888,7 +1911,24 @@
    "outputs": [],
    "source": [
     "query = \"پرسش ۱۶: در بیانیه‌ی هکرها گفته شده که جرم آن‌ها در یک کلمه چیست؟\"\n",
-    "answer16 = None"
+    "answer16 = rag_chain.invoke({\"input\": query})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Google software engineer interview\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(answer15)"
    ]
   },
   {
@@ -1933,9 +1973,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Paths:\n",
+      "['answers.json', 'librechat.ipynb']\n"
+     ]
+    }
+   ],
    "source": [
     "import zipfile\n",
     "import os\n",
@@ -1944,9 +1993,12 @@
     "# Make a list of the answers\n",
     "answers = [globals()[f'answer{i}'] for i in range(1, 17)]\n",
     "\n",
+    "# تبدیل به لیست دیکشنری با کلیدهای مناسب\n",
+    "formatted_answers = [{\"question_number\": i+1, \"answer\": ans} for i, ans in enumerate(answers)]\n",
+    "\n",
     "# Save the answers to a JSON file\n",
     "with open('answers.json', 'w') as f:\n",
-    "    json.dump(answers, f, ensure_ascii=False, indent=4)\n",
+    "    json.dump(formatted_answers, f, ensure_ascii=False, indent=4)\n",
     "\n",
     "notebook_path = 'librechat.ipynb'\n",
     "\n",
@@ -1965,6 +2017,20 @@
     "\n",
     "file_names = ['answers.json', notebook_path]\n",
     "compress(file_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # تبدیل به لیست دیکشنری با کلیدهای مناسب\n",
+    "# formatted_answers = [{\"question_number\": i+1, \"answer\": ans} for i, ans in enumerate(answers)]\n",
+    "\n",
+    "# # ذخیره به فایل JSON\n",
+    "# with open('answers.json', 'w', encoding='utf-8') as f:\n",
+    "#     json.dump(formatted_answers, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
